<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/rounded_border_dialog" android:layout_width="300.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#de000000" android:gravity="center_vertical" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/discard_movie" android:lineSpacingExtra="20.0dip" android:alpha="87.0" android:fontFamily="@font/sf_pro_display_medium" />
    <TextView android:textSize="16.0sp" android:textColor="#ff232f34" android:gravity="center_vertical" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/if_you_go_back_you_will_lose_your_movie" android:alpha="60.0" android:fontFamily="@font/sf_pro_display_regular" />
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="52.0dip" android:layout_marginTop="28.0dip">
        <TextView android:textSize="14.0dip" android:textColor="#ff5c1349" android:gravity="center" android:id="@id/tv_keep" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_margin="8.0dip" android:text="@string/keep" android:layout_alignParentRight="true" android:textAllCaps="true" android:fontFamily="@font/sf_pro_display_medium" android:layout_alignParentEnd="true" style="@style/SelectableItemBackground" />
        <TextView android:textSize="14.0dip" android:textColor="#ff5c1349" android:gravity="center" android:id="@id/tv_discard" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_margin="8.0dip" android:text="@string/discard" android:layout_toLeftOf="@id/tv_keep" android:textAllCaps="true" android:fontFamily="@font/sf_pro_display_medium" style="@style/SelectableItemBackground" />
    </RelativeLayout>
</LinearLayout>