<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@android:color/transparent" android:layout_width="300.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_gravity="center" android:layout_width="300.0dip" android:layout_height="wrap_content" app:cardBackgroundColor="@android:color/white" app:cardCornerRadius="2.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_gravity="center_horizontal" android:background="#ffffdf29" android:layout_width="fill_parent" android:layout_height="150.0dip">
                <com.airbnb.lottie.LottieAnimationView android:layout_gravity="center" android:id="@id/lottie" android:layout_width="fill_parent" android:layout_height="fill_parent" app:lottie_rawRes="@raw/five_star_rating" />
            </FrameLayout>
            <LinearLayout android:orientation="vertical" android:paddingLeft="12.0dip" android:paddingTop="24.0dip" android:paddingRight="12.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="#ff6d6d6d" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rating_dialog_experience" android:fontFamily="@font/sf_pro_display_regular" />
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/scaleRatingBar" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="16.0dip">
                    <ImageView android:id="@id/star_1" android:padding="2.0dip" android:layout_width="46.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_star_blur" />
                    <ImageView android:id="@id/star_2" android:padding="2.0dip" android:layout_width="46.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_star_blur" />
                    <ImageView android:id="@id/star_3" android:padding="2.0dip" android:layout_width="46.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_star_blur" />
                    <ImageView android:id="@id/star_4" android:padding="2.0dip" android:layout_width="46.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_star_blur" />
                    <ImageView android:id="@id/star_5" android:padding="2.0dip" android:layout_width="46.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_star_blur" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="24.0dip">
                    <TextView android:textSize="13.0sp" android:textColor="#ff2b84ff" android:gravity="center" android:id="@id/tv_later" android:background="@drawable/bg_later" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="16.0dip" android:text="@string/rating_dialog_maybe_later" android:layout_weight="2.0" android:textAllCaps="true" android:fontFamily="@font/sf_pro_display_regular" />
                    <TextView android:textSize="13.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tv_submit" android:background="@drawable/bg_submit" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/rating_dialog_submit" android:layout_weight="2.0" android:textAllCaps="true" android:fontFamily="@font/sf_pro_display_regular" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>