<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 Zhihu Inc.
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/root"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:elevation="4dp"
            android:theme="?toolbar"
            android:backgroundTint="@color/colorWhite"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <ImageView
                    android:id="@+id/editSelectedPhotoBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/selected_album"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/editSelectedPhotoBack"
                    android:layout_toStartOf="@id/editSelectedPhotoDone"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="100 selected" />

                <ImageView
                    android:id="@+id/editSelectedPhotoDone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:paddingHorizontal="16dp"
                    android:src="@drawable/ic_drop_down" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/bottom_toolbar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?attr/bottomToolbar.bg"
            android:backgroundTint="@color/colorWhite"
            android:elevation="4dp"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/button_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:foreground="?selectableItemBackground"
                android:padding="16dp"
                android:text="@string/button_preview"
                android:visibility="gone"
                android:textColor="?attr/bottomToolbar.preview.textColor"
                android:textSize="16sp" />

            <LinearLayout
                android:padding="16dp"
                android:id="@+id/originalLayout"
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:foreground="?selectableItemBackground"
                android:layout_height="wrap_content"
                tools:showIn="@layout/activity_matisse">


                <com.matisse.internal.ui.widget.CheckRadioView
                    android:id="@+id/original"
                    android:src="@drawable/ic_preview_radio_off"
                    android:layout_gravity="center_vertical"
                    android:layout_width="16dp"
                    android:layout_height="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:enabled="true"
                    android:paddingStart="4dp"
                    android:paddingLeft="4dp"
                    android:text="@string/button_original"
                    android:textColor="?attr/bottomToolbar.preview.textColor"
                    android:textSize="14sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/button_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:foreground="?selectableItemBackground"
                android:padding="16dp"
                android:visibility="gone"
                android:textColor="?attr/bottomToolbar.apply.textColor"
                android:textSize="16sp" />
            <RelativeLayout
                android:id="@id/listPhoto"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="80.0dip">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@id/recyclerPhoto"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/_8sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    android:layout_toStartOf="@+id/movie_add_float"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/movie_add_float"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/selected_border"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:padding="14.0dip"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_arrow_next" />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_toolbar"
            android:layout_below="@id/toolbar"
            android:background="@color/white"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_toolbar"
            android:layout_below="@id/toolbar"
            android:visibility="gone">

            <TextView
                android:id="@+id/empty_view_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="8dp"
                android:drawableTop="?attr/album.emptyView"
                android:gravity="center"
                android:text="@string/empty_text"
                android:textColor="?attr/album.emptyView.textColor"
                android:textSize="16sp" />

        </FrameLayout>
    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/topSheetWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchorGravity="bottom"
        android:layout_marginTop="?actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/top_sheet"
            android:layout_width="match_parent"
            app:layout_behavior="com.matisse.TopSheet.TopSheetBehavior"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albumList"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                android:background="#FFFFFF"
                android:layout_above="@id/blackBar"
                tools:listitem="@layout/item_image_album"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <FrameLayout
                android:layout_alignParentBottom="true"
                android:id="@+id/blackBar"
                android:layout_centerInParent="true"
                android:layout_marginBottom="50dp"
                android:background="@drawable/bg_bottom_rounded"
                android:backgroundTint="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="32dp">
                <View
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:layout_width="50dp"
                    android:layout_height="5dp"/>
            </FrameLayout>
        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>